# bootstrap-cpp-sdl2

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
cmake/: clang-dev-tools.cmake
cmake/modules/: FindCppUnit.cmake
include/: Application.hpp
src/: Application.cpp  Main.cpp
test/: ApplicationTest.cpp  CMakeLists.txt  Main.cpp
