IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
  find_package(CppUnit REQUIRED)

  IF(CPPUNIT_LIBRARY)
    SET(CMAKE_CXX_FLAGS "-std=c++11")
    file(GLOB_RECURSE TESTS_SOURCE_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
    list(REMOVE_ITEM PROJECT_SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/Main.cpp)

    add_executable(tests
      ${PROJECT_SOURCE_FILES}
      ${TESTS_SOURCE_FILES}
    )

    message(${PROJECT_SOURCE_DIR})

    target_link_libraries(tests
      ${CPPUNIT_LIBRARY}
      ${SDL2_LIBRARY}
      ${SDL2_IMAGE_LIBRARY}
      ${SDL2_TTF_LIBRARY}
    )
  ENDIF(CPPUNIT_LIBRARY)
ENDIF(CMAKE_BUILD_TYPE)